objects/QualificationProcessStage__c.object
<CustomObject>
    <description>The stages that a qualification can be in.</description>
    <fields>
        <fullName>ExternalName__c</fullName>
        <description>The client-friendly name for this qualification process stage.</description>
        <inlineHelpText>The client-friendly name for this qualification process stage.</inlineHelpText>
        <label>External Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InCertificationProcessBit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes whether this process stage is part of the certification process or not.</description>
        <inlineHelpText>Denotes whether this process stage is part of the certification process or not.</inlineHelpText>
        <label>In Certification Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QualificationProcessStageEID__c</fullName>
        <description>The Enterprise ID for this qualification process stage.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this qualification process stage.</inlineHelpText>
        <label>Qualification Process Stage EID</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RankOrder__c</fullName>
        <description>The order of importance of this qualification process stage.</description>
        <inlineHelpText>The order of importance of this qualification process stage.</inlineHelpText>
        <label>Rank Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Document Process Stage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>QualificationProcessStageEID__c</columns>
        <columns>RankOrder__c</columns>
        <columns>InCertificationProcessBit__c</columns>
        <columns>NAME</columns>
        <columns>ExternalName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Document Process Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Process Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>